--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
 DB_CONNECTION = mongodb+srv://steven:guarderia@cluster0.tggm6.mongodb.net/mern_calendar
+SECRET_JWT_SEED = This-a-word-secret
